# mains-aegis

./: .gitignore  .gitmodules  AGENTS.md  commitlint.config.cjs  lefthook.yml  mcu-agentd.toml  package.json
.github/workflows/: ci.yml  dependency-review.yml  docs-pages.yml  firmware.yml  lint-pr-title.yml
docs/: README.md  audio-design.md  bms-design.md  boot-self-test-flow.md  charger-design.md  hardware-selection.md  i2c-address-map.md  power-monitoring-design.md  quality-gates.md  ups-output-design.md
docs-site/: package.json  rspress.config.ts
docs-site/docs/: 404.md  index.md
docs-site/docs/design/: front-panel-and-firmware.md  front-panel-screen-pages.md  front-panel-ui-design.md  front-panel-ui-gallery.md  index.md  power-and-bms.md  system-overview.md
docs-site/docs/handbook/: index.md
docs-site/docs/manual/: basic-use-and-troubleshooting.md  firmware-flash-and-self-test.md  index.md  pcb-and-wiring-checks.md  prepare-and-scope.md
docs/audio-cues-preview/: README.md  cues.manifest.json  generation-report.json  preview.css  preview.html  preview.js
docs/audio-cues-preview/audio/: battery_low_no_mains.mid  battery_low_with_mains.mid  battery_protection.mid  boot_startup.mid  charge_completed.mid  charge_started.mid  high_stress.mid  io_over_current.mid  io_over_power.mid  io_over_voltage.mid  mains_absent_dc.mid  mains_present_dc.mid  module_fault.mid  shutdown_mode_entered.mid  shutdown_protection.mid
docs/audio-cues-preview/scores/: battery_low_no_mains.json  battery_low_with_mains.json  battery_protection.json  boot_startup.json  charge_completed.json  charge_started.json  high_stress.json  io_over_current.json  io_over_power.json  io_over_voltage.json  mains_absent_dc.json  mains_present_dc.json  module_fault.json  shutdown_mode_entered.json  shutdown_protection.json
docs/datasheets/: CLM1612P1412-vs-SFJ-1412.md  README.md
docs/datasheets/BM3451TJDC-T28A/: BM3451TJDC-T28A.md
docs/datasheets/BQ25792/: BQ25792.md  README.md
docs/datasheets/BQ296100DSGR/: BQ296100DSGR.md  README.md
docs/datasheets/BQ40Z50-R2/: BQ40Z50-R2.md  README.md
docs/datasheets/CKST1004/: CKST1004.md  README.md
docs/datasheets/CLM1612P1412/: CLM1612P1412.md  README.md
docs/datasheets/CST816D/: CST816D.lock.json  CST816D.md  README.md
docs/datasheets/FUSB302B/: FUSB302B.md  README.md
docs/datasheets/GC9307/: GC9307.lock.json  GC9307.md  README.md
docs/datasheets/INA3221/: INA3221.lock.json  INA3221.md  README.md
docs/datasheets/MX5050T/: MX5050T.md  README.md
docs/datasheets/SFJ-1412/: README.md  SFJ-1412.md
docs/datasheets/SI2310A/: README.md  SI2310A.md
docs/datasheets/UMW_AO3400A/: README.md  UMW_AO3400A.md
docs/datasheets/UMW_SI2305A/: README.md  UMW_SI2305A.md
docs/datasheets/ch224q/: CH224Q.md  README.md
docs/datasheets/ch442e/: CH440DS1.md  README.md
docs/datasheets/esp32-s3-fh4r2/: README.md  esp32-s3-fh4r2.md
docs/hardware-selection/: bms-bm3451-vs-bq40z50-r2.md  bms-bm3451tjdc-t28a.md  esp32-s3-fh4r2-gpio.md
docs/manuals/: README.md
docs/manuals/BQ40Z50-R2-TRM/: BQ40Z50-R2-TRM.md  README.md
docs/manuals/esp32-s3-errata/: README.md  esp32-s3-errata.md
docs/manuals/esp32-s3-hardware-design-guidelines/: README.md  esp32-s3-hardware-design-guidelines.md
docs/manuals/esp32-s3-packaging-information/: README.md  esp32-s3-packaging-information.md
docs/modules/: README.md  regulated-output.md
docs/pcbs/: README.md  eda-notes.md
docs/pcbs/front-panel/: README.md  netlist.enet
docs/pcbs/mainboard/: README.md  netlist.enet  vin-bus-reinforcement.md
docs/plan/: README.md
docs/plan/0005:tps55288-control/: PLAN.md
docs/reference-designs/: README.md
docs/solutions/: README.md
docs/specs/: README.md
firmware/: Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/build_support/: wifi_env.rs
firmware/display-diag/: mcu-agentd.toml
firmware/display-test/: mcu-agentd.toml
firmware/host-tests/runtime-audio-recovery/: Cargo.toml
firmware/host-tests/runtime-audio-recovery/src/: lib.rs
firmware/host-unit-tests/: Cargo.toml
firmware/host-unit-tests/src/: lib.rs  usb_pd.rs
firmware/scripts/: audit-host-tests.py  run-host-unit-tests.sh
firmware/src/: audio.rs  audio_demo.rs  bq25792.rs  bq40z50.rs  display_pipeline.rs  fan.rs  front_panel.rs  front_panel_logic.rs  front_panel_scene.rs  irq.rs  lib.rs  main.rs  mdns.rs  mdns_wire.rs  net.rs  net_bridge.rs  net_contract.rs  net_logic.rs  net_types.rs  output_protection.rs  output_retry.rs  output_state.rs  runtime_audio_recovery.rs  test_audio.rs  test_harness.rs  time.rs  tmp112.rs  tps55288_test.rs  tps_test_runtime.rs
firmware/src/output/: channel.rs  mod.rs  pure.rs  tps55288.rs
firmware/src/usb_pd/: contract_tracker.rs  fusb302.rs  mod.rs  pd.rs  recovery.rs  runtime.rs  sink_policy.rs  tests.rs
firmware/ui/: README.md  component-contracts.md  dashboard-design.md  dashboard-detail-design.md  design-language.md  front-panel-design.md  self-check-design.md  visual-regression-checklist.md
host-tests/runtime-audio-recovery/: build.rs
scripts/: format_staged.sh
tools/audio/: buzzer_preview.py  gen_demo_playlist_pcm.py  gen_status_alert_error_previews.py
tools/bq40-comm-tool/: .esp32-port.example  .gitignore  README.md  mcu-agentd.toml
tools/bq40-comm-tool/crates/ina3221-async/: Cargo.toml  README.md
tools/bq40-comm-tool/crates/ina3221-async/src/: data_types.rs  driver.rs  error.rs  lib.rs  registers.rs
tools/bq40-comm-tool/firmware/: Cargo.toml  build.rs
tools/bq40-comm-tool/firmware/assets/bq40z50_r2_v2_11_build_52/: README.md
tools/bq40-comm-tool/firmware/assets/bq40z50_r3_v3_09_build_73/: README.md
tools/bq40-comm-tool/firmware/assets/bq40z50_r5_v5_05_build_96/: README.md
tools/bq40-comm-tool/firmware/src/: bq25792.rs  bq40z50.rs  irq.rs  lib.rs  main.rs  tmp112.rs
tools/bq40-comm-tool/firmware/src/output/: mod.rs  tps55288.rs
tools/front-panel-preview/: Cargo.toml
tools/front-panel-preview/scripts/: render_dashboard_detail_icon_sheet.py  render_dashboard_review_set.py
tools/front-panel-preview/src/: main.rs
(+81 files in other folders)
