[package]
name = "esp-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
# Development-only override: force charger enable with minimal current for pack/gauge wake-up.
force-min-charge = []
# Development-only diagnostics: probe BQ40Z50 on both 0x0B and 0x16.
bms-dual-probe-diag = []
# Test firmware gate (prevents default cargo build/check from forcing test-fw feature selection).
test-fw = []
tps-test-fw = []
# Test firmware function set.
test-fw-screen-static = ["test-fw"]
test-fw-audio-playback = ["test-fw"]
# Test firmware default entry selection (single-choice).
test-fw-default-screen-static = ["test-fw"]
test-fw-default-audio-playback = ["test-fw"]
display-spi-20mhz = []
display-spi-40mhz = []

[[bin]]
name = "test-fw"
path = "src/bin/test-fw.rs"
required-features = ["test-fw"]

[[bin]]
name = "tps-test-fw"
path = "src/bin/tps-test-fw.rs"
required-features = ["tps-test-fw"]

[dependencies]
defmt = "1.0.1"
embedded-graphics-core = "0.4.1"
embedded-hal = "1"
gc9307-async = { version = "0.1.1", default-features = false }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "defmt"] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "rt", "unstable", "defmt", "psram"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32s3", "defmt-espflash", "jtag-serial"] }
ina3221-async = { path = "../ina3221-async", features = ["defmt"] }
tps55288 = { package = "tps55288-rs", git = "https://github.com/IvanLi-CN/tps55288-rs", rev = "e451aa816ef97fb08ae162ed2baca414d0b22823", features = ["defmt"] }
u8g2-fonts = { version = "0.7.2", default-features = false }

[profile.dev.package.xtensa-lx-rt]
opt-level = "z"
