[package]
name = "esp-firmware-host-unit-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
pd-sink-fixed-5v = []
pd-sink-fixed-9v = []
pd-sink-fixed-12v = []
pd-sink-fixed-15v = []
pd-sink-fixed-20v = []
pd-sink-pps = []

[dependencies]
defmt = "1.0.1"
embedded-graphics-core = "0.4.1"
embedded-hal = "1"
ina3221-async = { path = "../../ina3221-async", features = ["defmt"] }
u8g2-fonts = { version = "0.7.2", default-features = false }
