[package]
name = "esp-firmware-host-unit-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
net_http = []
no-pd-sink-5v = []
no-pd-sink-9v = []
no-pd-sink-12v = []
no-pd-sink-15v = []
no-pd-sink-20v = []
no-pps = []

[dependencies]
defmt = "1.0.1"
embedded-graphics-core = "0.4.1"
embedded-hal = "1"
heapless = "0.8"
ina3221-async = { path = "../../ina3221-async", features = ["defmt"] }
u8g2-fonts = { version = "0.7.2", default-features = false }
